tests/spec/format/snapshots/comment_same_line_trailing_on_last_of_inline_statements.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    let x = 1; let y = 2; // trailing on y
    let z = 3
  }
---
fn test() {
  let x = 1
  let y = 2 // trailing on y
  let z = 3
}
