tests/spec/format/snapshots/comment_same_line_trailing_on_last_struct_field.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct S {
    a: int,
    b: int, // trailing
  }
---
struct S {
  a: int,
  b: int, // trailing
}
