tests/spec/format/snapshots/comment_same_line_trailing_on_match_arm.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(x: int) -> int {
    match x {
      1 => 1, // trailing arm
      2 => 2,
      _ => 0,
    }
  }
---
fn f(x: int) -> int {
  match x {
    1 => 1, // trailing arm
    2 => 2,
    _ => 0,
  }
}
