tests/spec/format/snapshots/comment_same_line_trailing_on_nested_match_arm_in_select.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v, // trailing nested arm
        None => 0,
      },
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v, // trailing nested arm
      None => 0,
    },
  }
}
