tests/spec/format/snapshots/comment_same_line_trailing_on_only_struct_field.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct S {
    x: int, // trailing
  }
---
struct S {
  x: int, // trailing
}
