tests/spec/format/snapshots/comment_same_line_trailing_on_select_arm.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v,
        None => 0,
      }, // trailing arm
      _ => 1,
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v,
      None => 0,
    }, // trailing arm
    _ => 1,
  }
}
