tests/spec/format/snapshots/comment_same_line_trailing_on_slice_pattern_element.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f() -> int {
    match [1, 2] {
      [a, // trailing slice elem
      b] => a + b,
      _ => 0,
    }
  }
---
fn f() -> int {
  match [1, 2] {
    [
      a, // trailing slice elem
      b,
    ] => a + b,
    _ => 0,
  }
}
