tests/spec/format/snapshots/comment_same_line_trailing_on_struct_pattern_field.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Point { x: int, y: int }
  
  fn f(p: Point) -> int {
    match p {
      Point { x: 1, // trailing struct field
      y: 2 } => 0,
      _ => 1,
    }
  }
---
struct Point { x: int, y: int }

fn f(p: Point) -> int {
  match p {
    Point {
      x: 1, // trailing struct field
      y: 2,
    } => 0,
    _ => 1,
  }
}
