tests/spec/format/snapshots/comment_same_line_trailing_on_tuple_pattern_element.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(x: (int, int)) -> int {
    match x {
      (1, // trailing tuple elem
      2) => 0,
      _ => 1,
    }
  }
---
fn f(x: (int, int)) -> int {
  match x {
    (
      1, // trailing tuple elem
      2,
    ) => 0,
    _ => 1,
  }
}
