tests/spec/format/snapshots/comment_same_line_with_close_brace_on_last_nested_match_arm.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v,
        None => 0, // contains } early
      },
      _ => 1,
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v,
      None => 0, // contains } early
    },
    _ => 1,
  }
}
