tests/spec/format/snapshots/comment_trailing.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    let x = 1 // trailing comment
  }
---
fn test() {
  let x = 1 // trailing comment
}
